--- a/pages/acerca.html
+++ b/pages/acerca.html
@@ -29,27 +29,9 @@
         <section>
             <div>
                 <h1 class="titulos">Acerca</h1>
-                <P>En Meow Cafe, nuestra historia es una de amor por los gatos y pasión por el café. Fundado por [Tus
-                    Nombres], somos un equipo de amantes de los felinos que decidimos crear un espacio único donde las
-                    personas pueden disfrutar de la compañía de gatos mientras degustan deliciosas bebidas y bocadillos.
+                <p>La historia de Miau Café comenzó con la visión de crear un espacio donde los amantes de los gatos pudieran disfrutar de la compañía de estos encantadores felinos mientras saborean una taza de café o té. Fundada por un grupo de apasionados dueños de gatos, nuestra cafetería es el hogar permanente de una pandilla de gatos consentidos que forman parte integral de nuestra familia y, por supuesto, de la experiencia que ofrecemos a nuestros visitantes.
 
-                    Desde el momento en que abrimos nuestras puertas, nos hemos comprometido a brindar un refugio seguro
-                    y acogedor para gatos rescatados que buscan un hogar. No solo somos una cafetería, sino también una
-                    plataforma para la adopción de gatos, conectando a estos maravillosos seres con familias amorosas.
-
-                    Nuestra misión es simple: proporcionar a nuestros clientes una experiencia inolvidable y, al mismo
-                    tiempo, contribuir al bienestar de los gatos necesitados. Cada visita a Meow Cafe es una oportunidad
-                    para disfrutar de la alegría y la calidez que nuestros amigos felinos traen a nuestras vidas.
-
-                    Estamos comprometidos con la comodidad y la felicidad tanto de nuestros visitantes humanos como de
-                    nuestros gatos residentes. Nuestro equipo dedicado se asegura de que cada experiencia sea memorable
-                    y segura para todos.
-
-                    Gracias por ser parte de la historia de Meow Cafe y por apoyar nuestra causa. Esperamos que
-                    disfrutes de tu tiempo con nosotros y, quién sabe, ¡quizás encuentres a tu compañero felino perfecto
-                    para llevar a casa!
-
-                    ¡Ven y únete a nosotros en Meow Cafe! ¡Los michis y el café te esperan!</P>
+                En Miau Café, nos enorgullece brindar un entorno seguro y acogedor para nuestros gatos, garantizando que vivan vidas felices y saludables. Cada uno de ellos tiene su propia historia y personalidad única, lo que agrega un toque especial a la atmósfera de nuestra cafetería. Ven y únete a nuestra historia, donde la pasión por los gatos y la pasión por el café se unen para crear un lugar mágico donde el amor felino es una constante. ¡Bienvenido a Miau Café, donde nuestros gatos son parte esencial de nuestra familia y de tu experiencia inolvidable!</p>
             </div>
             <div>
                 <img src="../assets/img/logo_cat_cafeold.png" alt="">
