--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -29,6 +29,7 @@
         <h1>Contacto</h1>
         <section>
             <h2>¡Dejanos tus comentarios!</h2>
+            <p>¿Tienes preguntas, comentarios o simplemente quieres saludar a nuestros adorables gatos? Estamos encantados de escucharte. En Miau Café, valoramos tu retroalimentación y estamos aquí para ayudarte en lo que necesites. No dudes en contactarnos a través de los siguientes medios. Estamos ansiosos por recibir tus mensajes y conocerte mejor. ¡Hablemos!</p>
             <form action="">
                 <div>
                     <label for="nombre">Nombre*</label>
@@ -59,10 +60,8 @@
                     referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
             <div>
-                <h2>subtitulo</h2>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quas, ex odio! Possimus tempore adipisci,
-                    alias voluptatum saepe obcaecati debitis minima velit quisquam quia repudiandae assumenda recusandae
-                    doloribus delectus nobis temporibus!</p>
+                <h2>¡Ven a visitarnos!</h2>
+                <p>¡Te invitamos a visitarnos en nuestro acogedor rincón de gatos en Viña del Mar! Estamos ubicados en una de las zonas más encantadoras de la ciudad, donde podrás disfrutar de la brisa marina y, por supuesto, de la compañía de nuestros gatos.</p>
             </div>
         </section>
     </main>
