--- a/pages/acerca.html
+++ b/pages/acerca.html
@@ -29,9 +29,18 @@
         <section>
             <div>
                 <h1 class="titulos">Acerca</h1>
-                <p>La historia de Miau Café comenzó con la visión de crear un espacio donde los amantes de los gatos pudieran disfrutar de la compañía de estos encantadores felinos mientras saborean una taza de café o té. Fundada por un grupo de apasionados dueños de gatos, nuestra cafetería es el hogar permanente de una pandilla de gatos consentidos que forman parte integral de nuestra familia y, por supuesto, de la experiencia que ofrecemos a nuestros visitantes.
+                <p>La historia de Miau Café comenzó con la visión de crear un espacio donde los amantes de los gatos
+                    pudieran disfrutar de la compañía de estos encantadores felinos mientras saborean una taza de café o
+                    té. Fundada por un grupo de apasionados dueños de gatos, nuestra cafetería es el hogar permanente de
+                    una pandilla de gatos consentidos que forman parte integral de nuestra familia y, por supuesto, de
+                    la experiencia que ofrecemos a nuestros visitantes.
 
-                En Miau Café, nos enorgullece brindar un entorno seguro y acogedor para nuestros gatos, garantizando que vivan vidas felices y saludables. Cada uno de ellos tiene su propia historia y personalidad única, lo que agrega un toque especial a la atmósfera de nuestra cafetería. Ven y únete a nuestra historia, donde la pasión por los gatos y la pasión por el café se unen para crear un lugar mágico donde el amor felino es una constante. ¡Bienvenido a Miau Café, donde nuestros gatos son parte esencial de nuestra familia y de tu experiencia inolvidable!</p>
+                    En Miau Café, nos enorgullece brindar un entorno seguro y acogedor para nuestros gatos, garantizando
+                    que vivan vidas felices y saludables. Cada uno de ellos tiene su propia historia y personalidad
+                    única, lo que agrega un toque especial a la atmósfera de nuestra cafetería. Ven y únete a nuestra
+                    historia, donde la pasión por los gatos y la pasión por el café se unen para crear un lugar mágico
+                    donde el amor felino es una constante. ¡Bienvenido a Miau Café, donde nuestros gatos son parte
+                    esencial de nuestra familia y de tu experiencia inolvidable!</p>
             </div>
             <div>
                 <img src="../assets/img/logo_cat_cafeold.png" alt="">
