--- a/pages/michis.html
+++ b/pages/michis.html
@@ -30,28 +30,36 @@
             <h2>
                 Hecate
             </h2>
-            <p>Hecate es una gata tricolor muy cariñosa y juguetona que roba corazones en Miau Café. Con su actitud juguetona y su amor por la diversión, Hecate es la compañía perfecta para aquellos que buscan una interacción llena de alegría y vitalidad.</p>
+            <p>Hecate es una gata tricolor muy cariñosa y juguetona que roba corazones en Miau Café. Con su actitud
+                juguetona y su amor por la diversión, Hecate es la compañía perfecta para aquellos que buscan una
+                interacción llena de alegría y vitalidad.</p>
             <img src="../assets/img/gato1.jpg" alt="">
         </section>
         <section>
             <h2>
                 Luna
             </h2>
-            <p>Luna es la soñadora de Miau Café. Siempre puedes encontrarla disfrutando de una siesta tranquila en su rincón favorito. Su serenidad y calma son reconfortantes, y pasar tiempo a su lado es como encontrar un oasis de paz en medio del bullicio.</p>
+            <p>Luna es la soñadora de Miau Café. Siempre puedes encontrarla disfrutando de una siesta tranquila en su
+                rincón favorito. Su serenidad y calma son reconfortantes, y pasar tiempo a su lado es como encontrar un
+                oasis de paz en medio del bullicio.</p>
             <img src="../assets/img/gato2.jpg" alt="">
         </section>
         <section>
             <h2>
                 Simon
             </h2>
-            <p>Simón es el aventurero del grupo. Siempre en busca de diversión, es un experto en juegos y travesuras. Su energía y entusiasmo son contagiosos, y es el gato perfecto para aquellos que buscan una experiencia llena de vitalidad.</p>
+            <p>Simón es el aventurero del grupo. Siempre en busca de diversión, es un experto en juegos y travesuras. Su
+                energía y entusiasmo son contagiosos, y es el gato perfecto para aquellos que buscan una experiencia
+                llena de vitalidad.</p>
             <img src="../assets/img/gato3.jpg" alt="">
         </section>
         <section>
             <h2>
                 Benito
             </h2>
-            <p>Benito es el rey de la elegancia en Miau Café. Con su pelaje exuberante y sus ojos curiosos, es imposible no enamorarse de su encanto. Siempre dispuesto a recibir caricias y a posar para las fotos, Benito es el anfitrión perfecto en nuestro café.</p>
+            <p>Benito es el rey de la elegancia en Miau Café. Con su pelaje exuberante y sus ojos curiosos, es imposible
+                no enamorarse de su encanto. Siempre dispuesto a recibir caricias y a posar para las fotos, Benito es el
+                anfitrión perfecto en nuestro café.</p>
             <img src="../assets/img/gato1.jpg" alt="">
         </section>
     </main>
