--- a/index.html
+++ b/index.html
@@ -36,7 +36,13 @@
         <section class="texto">
             <div>
                 <h1>¡Ven a vivir la experiencia Cat Café en Miau Café!</h1>
-                <p>¡Bienvenidos al lugar donde los amantes de los felinos encuentran su paraíso! En nuestro Miau Café, te invitamos a sumergirte en un mundo de suavidad, ronroneos y pura diversión. Imagina relajarte con una taza de tu café o té favorito mientras disfrutas de la compañía de nuestros encantadores gatos, todos ansiosos por compartir su cariño contigo. Nuestro ambiente acogedor y relajado te permite escapar del estrés diario y disfrutar de la terapia felina definitiva. Ven a vivir una experiencia única en Miau Café, donde la ternura y la diversión se encuentran en cada rincón. ¿Estás listo para consentir a tu alma gatuna?
+                <p>¡Bienvenidos al lugar donde los amantes de los felinos encuentran su paraíso! En nuestro Miau Café,
+                    te invitamos a sumergirte en un mundo de suavidad, ronroneos y pura diversión. Imagina relajarte con
+                    una taza de tu café o té favorito mientras disfrutas de la compañía de nuestros encantadores gatos,
+                    todos ansiosos por compartir su cariño contigo. Nuestro ambiente acogedor y relajado te permite
+                    escapar del estrés diario y disfrutar de la terapia felina definitiva. Ven a vivir una experiencia
+                    única en Miau Café, donde la ternura y la diversión se encuentran en cada rincón. ¿Estás listo para
+                    consentir a tu alma gatuna?
                 </p>
                 <img src="./assets/img/gatos_ventana.jpeg" alt="gatos">
             </div>
@@ -44,7 +50,14 @@
         <section class="texto">
             <div>
                 <h1>¡Nuestros michis te esperan!</h1>
-                <p>Nuestros adorables mininos de Miau Café están ansiosos por conocerte. En "Nuestros Michis te Esperan", te presentamos a nuestra traviesa pandilla de gatos, cada uno con su personalidad única y encanto felino. Desde los juguetones gatitos que siempre están listos para una partida de caza hasta los gatos más relajados que disfrutan de una siesta tranquila en algún rincón acogedor, hay un mundo entero de diversión y amor por descubrir. ¿Quieres aprender más sobre nuestras mascotas de cuatro patas y sus historias en Miau Café? ¡Explora sus perfiles y descubre por qué cada uno de ellos es tan especial! Ven y conoce a los protagonistas de Miau Café y déjate cautivar por su magia peluda. </p>
+                <p>Nuestros adorables mininos de Miau Café están ansiosos por conocerte. En "Nuestros Michis te
+                    Esperan", te presentamos a nuestra traviesa pandilla de gatos, cada uno con su personalidad única y
+                    encanto felino. Desde los juguetones gatitos que siempre están listos para una partida de caza hasta
+                    los gatos más relajados que disfrutan de una siesta tranquila en algún rincón acogedor, hay un mundo
+                    entero de diversión y amor por descubrir. ¿Quieres aprender más sobre nuestras mascotas de cuatro
+                    patas y sus historias en Miau Café? ¡Explora sus perfiles y descubre por qué cada uno de ellos es
+                    tan especial! Ven y conoce a los protagonistas de Miau Café y déjate cautivar por su magia peluda.
+                </p>
             </div>
             <div>
                 <img src="./assets/img/gato1.jpg" alt="gatos">
