--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -29,7 +29,10 @@
         <h1>Contacto</h1>
         <section>
             <h2>¡Dejanos tus comentarios!</h2>
-            <p>¿Tienes preguntas, comentarios o simplemente quieres saludar a nuestros adorables gatos? Estamos encantados de escucharte. En Miau Café, valoramos tu retroalimentación y estamos aquí para ayudarte en lo que necesites. No dudes en contactarnos a través de los siguientes medios. Estamos ansiosos por recibir tus mensajes y conocerte mejor. ¡Hablemos!</p>
+            <p>¿Tienes preguntas, comentarios o simplemente quieres saludar a nuestros adorables gatos? Estamos
+                encantados de escucharte. En Miau Café, valoramos tu retroalimentación y estamos aquí para ayudarte en
+                lo que necesites. No dudes en contactarnos a través de los siguientes medios. Estamos ansiosos por
+                recibir tus mensajes y conocerte mejor. ¡Hablemos!</p>
             <form action="">
                 <div>
                     <label for="nombre">Nombre*</label>
@@ -61,7 +64,9 @@
             </div>
             <div>
                 <h2>¡Ven a visitarnos!</h2>
-                <p>¡Te invitamos a visitarnos en nuestro acogedor rincón de gatos en Viña del Mar! Estamos ubicados en una de las zonas más encantadoras de la ciudad, donde podrás disfrutar de la brisa marina y, por supuesto, de la compañía de nuestros gatos.</p>
+                <p>¡Te invitamos a visitarnos en nuestro acogedor rincón de gatos en Viña del Mar! Estamos ubicados en
+                    una de las zonas más encantadoras de la ciudad, donde podrás disfrutar de la brisa marina y, por
+                    supuesto, de la compañía de nuestros gatos.</p>
             </div>
         </section>
     </main>
