--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -27,7 +27,12 @@
     </header>
     <main>
         <h1>Galería</h1>
-        <p>En Miau Café, creemos en cautivar todos tus sentidos, y la vista es uno de los más importantes. Te invitamos a explorar nuestra vibrante galería de imágenes que capturan la esencia de la felicidad gatuna y la exquisitez de nuestras bebidas y alimentos. Desde gatos que derrochan amor hasta tazas de café humeante y bocados tentadores, nuestra galería te sumergirá en un mundo de emociones y sabores. Desplázate a través de nuestras fotos y deja que la belleza y la alegría de Miau Café te inspiren a planificar tu próxima visita. ¡Prepárate para un recorrido visual que te hará ronronear de placer!</p>
+        <p>En Miau Café, creemos en cautivar todos tus sentidos, y la vista es uno de los más importantes. Te invitamos
+            a explorar nuestra vibrante galería de imágenes que capturan la esencia de la felicidad gatuna y la
+            exquisitez de nuestras bebidas y alimentos. Desde gatos que derrochan amor hasta tazas de café humeante y
+            bocados tentadores, nuestra galería te sumergirá en un mundo de emociones y sabores. Desplázate a través de
+            nuestras fotos y deja que la belleza y la alegría de Miau Café te inspiren a planificar tu próxima visita.
+            ¡Prepárate para un recorrido visual que te hará ronronear de placer!</p>
         <img src="../assets/img/carta1.jpg" alt="">
         <img src="../assets/img/carta2.jpg" alt="">
         <img src="../assets/img/carta3.jpg" alt="">
