--- a/index.html
+++ b/index.html
@@ -6,76 +6,104 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inicio | Miau Café</title>
     <link rel="icon" href="./favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="./css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/estilos.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Gabarito&display=swap">
     <script src="https://kit.fontawesome.com/f836eb7316.js" crossorigin="anonymous"></script>
 </head>
 
-<body>
+<body class="container">
     <header>
         <a href="./index.html">
             <img src="./assets/img/logo_cat_cafe.png" alt="Logo" class="logo">
         </a>
-        <nav class="nav">
-            <ul>
-                <li><a href="./index.html" class="seleccion">Inicio</a></li>
-                <li><a href="./pages/galeria.html">Galería</a></li>
-                <li><a href="./pages/michis.html">Nuestros michis</a></li>
-                <li><a href="./pages/acerca.html">Acerca</a></li>
-                <li><a href="./pages/contacto.html">Contacto</a></li>
-            </ul>
+        <nav class="navbar navbar-expand-lg navbar-light bg-brown">
+            <div class="container">
+                <button class="navbar-toggler mb-2" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarTogglerDemo02">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0 mx-auto">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./pages/galeria.html">Galería</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./pages/michis.html">Nuestros michis</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./pages/acerca.html">Acerca</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./pages/contacto.html">Contacto</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </nav>
     </header>
     <main>
-        <section class="banner">
-            <div>
-                <h1>Meow Café</h1>
-                <p>Un café para ronronear</p>
+        <div class="card bg-dark text-black text-center ">
+            <img src="./assets/img/banner.jpeg" class="card-img" alt="Banner Miau Cafe">
+            <div class="card-img-overlay">
+                <h1 class="card-title">Miau Cafe</h1>
+                <p class="card-text">Un café para ronronear</p>
             </div>
+        </div>
         </section>
-        <section class="texto">
-            <div>
-                <h1>¡Ven a vivir la experiencia Cat Café en Miau Café!</h1>
-                <p>¡Bienvenidos al lugar donde los amantes de los felinos encuentran su paraíso! En nuestro Miau Café,
-                    te invitamos a sumergirte en un mundo de suavidad, ronroneos y pura diversión. Imagina relajarte con
-                    una taza de tu café o té favorito mientras disfrutas de la compañía de nuestros encantadores gatos,
-                    todos ansiosos por compartir su cariño contigo. Nuestro ambiente acogedor y relajado te permite
-                    escapar del estrés diario y disfrutar de la terapia felina definitiva. Ven a vivir una experiencia
-                    única en Miau Café, donde la ternura y la diversión se encuentran en cada rincón. ¿Estás listo para
-                    consentir a tu alma gatuna?
-                </p>
-                <img src="./assets/img/gatos_ventana.jpeg" alt="gatos">
+        <div class="container my-5">
+            <div class="row">
+                <div class="col-lg-6 col-sm-12 mb-4">
+                    <h1>¡Ven a vivir la experiencia Cat Café en Miau Café!</h1>
+                    <p>¡Bienvenidos al lugar donde los amantes de los felinos encuentran su paraíso! En nuestro Miau
+                        Café, te invitamos a sumergirte en un mundo de suavidad, ronroneos y pura diversión. Imagina
+                        relajarte con una taza de tu café o té favorito mientras disfrutas de la compañía de nuestros
+                        encantadores gatos, todos ansiosos por compartir su cariño contigo. Nuestro ambiente acogedor y
+                        relajado te permite escapar del estrés diario y disfrutar de la terapia felina definitiva. Ven a
+                        vivir una experiencia única en Miau Café, donde la ternura y la diversión se encuentran en cada
+                        rincón. ¿Estás listo para consentir a tu alma gatuna?</p>
+                </div>
+                <div class="col-lg-6 col-sm-12 mb-4">
+                    <img src="./assets/img/gatos_ventana.jpg" alt="Gatos en una ventana"
+                        class="img-fluid rounded-pill imagen">
+                </div>
             </div>
-        </section>
-        <section class="texto">
-            <div>
-                <h1>¡Nuestros michis te esperan!</h1>
-                <p>Nuestros adorables mininos de Miau Café están ansiosos por conocerte. En "Nuestros Michis te
-                    Esperan", te presentamos a nuestra traviesa pandilla de gatos, cada uno con su personalidad única y
-                    encanto felino. Desde los juguetones gatitos que siempre están listos para una partida de caza hasta
-                    los gatos más relajados que disfrutan de una siesta tranquila en algún rincón acogedor, hay un mundo
-                    entero de diversión y amor por descubrir. ¿Quieres aprender más sobre nuestras mascotas de cuatro
-                    patas y sus historias en Miau Café? ¡Explora sus perfiles y descubre por qué cada uno de ellos es
-                    tan especial! Ven y conoce a los protagonistas de Miau Café y déjate cautivar por su magia peluda.
-                </p>
+        </div>
+        <div class="container my-5">
+            <div class="row">
+                <div class="col-lg-6 col-sm-12 mb-4 order-lg-last">
+                    <h1>¡Nuestros michis te esperan!</h1>
+                    <p>Nuestros adorables mininos de Miau Café están ansiosos por conocerte. En "Nuestros Michis te
+                        Esperan", te presentamos a nuestra traviesa pandilla de gatos, cada uno con su personalidad
+                        única y encanto felino. Desde los juguetones gatitos que siempre están listos para una partida
+                        de caza hasta los gatos más relajados que disfrutan de una siesta tranquila en algún rincón
+                        acogedor, hay un mundo entero de diversión y amor por descubrir. ¿Quieres aprender más sobre
+                        nuestras mascotas de cuatro patas y sus historias en Miau Café? ¡Explora sus perfiles y descubre
+                        por qué cada uno de ellos es tan especial! Ven y conoce a los protagonistas de Miau Café y
+                        déjate cautivar por su magia peluda.</p>
+                </div>
+                <div class="col-lg-6 col-sm-12 mb-4 order-lg-first">
+                    <img src="./assets/img/gato1.jpg" alt="Gato y cafe" class="img-fluid rounded-pill imagen">
+                </div>
             </div>
-            <div>
-                <img src="./assets/img/gato1.jpg" alt="gatos">
-            </div>
-        </section>
+        </div>
     </main>
     <footer>
-        <div>
-            <img src="./assets/img/logo_cat_cafe.png" alt=" Logo" class="logofoot">
+        <div class="row">
+            <img src="./assets/img/logo_cat_cafe.png" alt=" Logo" class="logofoot col-lg-6">
             <p>Dirección: Algún lugar de Viña del Mar, Local 3</p>
             <p>Teléfono: +56 9 8765 4321</p>
         </div>
-        <div class="iconos">
+        <div class="iconos text-center">
             <a href="https://www.whatsapp.com" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
             <a href="https://www.instagram.com" target="_blank"><i class="fa-brands fa-instagram"></i></a>
             <a href="https://www.facebook.com" target="_blank"><i class="fa-brands fa-facebook"></i></a>
         </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
