--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body class="container">
     <header>
-        <a href="./index.html">
+        <a href="./index.html" class="d-flex justify-content-center">
             <img src="./assets/img/logo_cat_cafe.png" alt="Logo" class="logo">
         </a>
         <nav class="navbar navbar-expand-lg navbar-light bg-brown">
