--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -24,20 +24,20 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0 mx-auto">
-                        <li class="nav-item">
+                    <ul class="navbar-nav me-auto mb-2 mt-2 mb-lg-0 mx-auto ">
+                        <li class="nav-item text-center">
                             <a class="nav-link" href="../index.html">Inicio</a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item text-center">
                             <a class="nav-link" href="./galeria.html">Galería</a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item text-center">
                             <a class="nav-link" href="./michis.html">Nuestros michis</a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item text-center">
                             <a class="nav-link" href="./acerca.html">Acerca</a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item text-center">
                             <a class="nav-link active" aria-current="page" href="#">Contacto</a>
                         </li>
                     </ul>
@@ -93,7 +93,7 @@
     </main>
     <footer>
         <div>
-            <img src="../assets/img/logo_cat_cafe.png" alt=" Logo" class="logofoot">
+            <img src="../assets/img/logo_cat_cafe.png" alt=" Logo" class="logo logofoot">
             <p>Dirección: Algún lugar de Viña del Mar, Local 3</p>
             <p>Teléfono: +56 9 8765 4321</p>
         </div>
