--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -24,20 +24,20 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0 mx-auto">
-                        <li class="nav-item">
+                    <ul class="navbar-nav me-auto mb-2 mt-2 mb-lg-0 mx-auto ">
+                        <li class="nav-item text-center">
                             <a class="nav-link" href="../index.html">Inicio</a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item text-center">
                             <a class="nav-link active" aria-current="page" href="#"">Galería</a>
                         </li>
-                        <li class=" nav-item">
+                        <li class=" nav-item text-center">
                                 <a class="nav-link" href="./michis.html">Nuestros michis</a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item text-center">
                             <a class="nav-link" href="./acerca.html">Acerca</a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item text-center">
                             <a class="nav-link" href="./contacto.html">Contacto</a>
                         </li>
                     </ul>
@@ -53,16 +53,18 @@
             bocados tentadores, nuestra galería te sumergirá en un mundo de emociones y sabores. Desplázate a través de
             nuestras fotos y deja que la belleza y la alegría de Miau Café te inspiren a planificar tu próxima visita.
             ¡Prepárate para un recorrido visual que te hará ronronear de placer!</p>
-        <img src="../assets/img/carta1.jpg" alt="">
-        <img src="../assets/img/carta2.jpg" alt="">
-        <img src="../assets/img/carta3.jpg" alt="">
-        <img src="../assets/img/carta4.jpg" alt="">
-        <img src="../assets/img/carta5.jpg" alt="">
-        <img src="../assets/img/carta6.jpg" alt="">
+        <div class="d-flex flex-wrap justify-content-center">
+            <img src="../assets/img/carta1.jpg" class="col-sm-12 col-lg-3 rounded-3 m-3" alt="">
+            <img src="../assets/img/carta2.jpg" class="col-sm-12 col-lg-3 rounded-3 m-3" alt="">
+            <img src="../assets/img/carta3.jpg" class="col-sm-12 col-lg-3 rounded-3 m-3" alt="">
+            <img src="../assets/img/carta4.jpg" class="col-sm-12 col-lg-3 rounded-3 m-3" alt="">
+            <img src="../assets/img/carta5.jpg" class="col-sm-12 col-lg-3 rounded-3 m-3" alt="">
+            <img src="../assets/img/carta6.jpg" class="col-sm-12 col-lg-3 rounded-3 m-3" alt="">
+        </div>
     </main>
     <footer>
         <div>
-            <img src="../assets/img/logo_cat_cafe.png" alt=" Logo" class="logofoot">
+            <img src="../assets/img/logo_cat_cafe.png" alt=" Logo" class="logo logofoot">
             <p>Dirección: Algún lugar de Viña del Mar, Local 3</p>
             <p>Teléfono: +56 9 8765 4321</p>
         </div>
