--- a/pages/michis.html
+++ b/pages/michis.html
@@ -24,20 +24,20 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0 mx-auto">
-                        <li class="nav-item">
+                    <ul class="navbar-nav me-auto mb-2 mt-2 mb-lg-0 mx-auto ">
+                        <li class="nav-item text-center">
                             <a class="nav-link" href="../index.html">Inicio</a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item text-center">
                             <a class="nav-link" href="./galeria.html">Galería</a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item text-center">
                             <a class="nav-link active" aria-current="page" href="#">Nuestros michis</a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item text-center">
                             <a class="nav-link" href="./acerca.html">Acerca</a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item text-center">
                             <a class="nav-link" href="./contacto.html">Contacto</a>
                         </li>
                     </ul>
@@ -46,46 +46,46 @@
         </nav>
     </header>
     <main>
-        <section>
+        <section class="my-3">
             <h2>
                 Hecate
             </h2>
             <p>Hecate es una gata tricolor muy cariñosa y juguetona que roba corazones en Miau Café. Con su actitud
                 juguetona y su amor por la diversión, Hecate es la compañía perfecta para aquellos que buscan una
                 interacción llena de alegría y vitalidad.</p>
-            <img src="../assets/img/gato1.jpg" alt="">
+            <img src="../assets/img/gato1.jpg" class="img-fluid" alt="">
         </section>
-        <section>
+        <section class="my-3">
             <h2>
                 Luna
             </h2>
             <p>Luna es la soñadora de Miau Café. Siempre puedes encontrarla disfrutando de una siesta tranquila en su
                 rincón favorito. Su serenidad y calma son reconfortantes, y pasar tiempo a su lado es como encontrar un
                 oasis de paz en medio del bullicio.</p>
-            <img src="../assets/img/gato2.jpg" alt="">
+            <img src="../assets/img/gato2.jpg" class="img-fluid" alt="">
         </section>
-        <section>
+        <section class="my-3">
             <h2>
                 Simon
             </h2>
             <p>Simón es el aventurero del grupo. Siempre en busca de diversión, es un experto en juegos y travesuras. Su
                 energía y entusiasmo son contagiosos, y es el gato perfecto para aquellos que buscan una experiencia
                 llena de vitalidad.</p>
-            <img src="../assets/img/gato3.jpg" alt="">
+            <img src="../assets/img/gato3.jpg" class="img-fluid" alt="">
         </section>
-        <section>
+        <section class="my-3">
             <h2>
                 Benito
             </h2>
             <p>Benito es el rey de la elegancia en Miau Café. Con su pelaje exuberante y sus ojos curiosos, es imposible
                 no enamorarse de su encanto. Siempre dispuesto a recibir caricias y a posar para las fotos, Benito es el
                 anfitrión perfecto en nuestro café.</p>
-            <img src="../assets/img/gato1.jpg" alt="">
+            <img src="../assets/img/gato1.jpg" class="img-fluid" alt="">
         </section>
     </main>
     <footer>
         <div>
-            <img src="../assets/img/logo_cat_cafe.png" alt=" Logo" class="logofoot">
+            <img src="../assets/img/logo_cat_cafe.png" alt=" Logo" class="logo logofoot">
             <p>Dirección: Algún lugar de Viña del Mar, Local 3</p>
             <p>Teléfono: +56 9 8765 4321</p>
         </div>
