--- a/pages/acerca.html
+++ b/pages/acerca.html
@@ -24,7 +24,7 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse justify-content-center " id="navbarTogglerDemo02">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0 mx-auto ">
+                    <ul class="navbar-nav me-auto mb-2 mt-2 mb-lg-0 mx-auto ">
                         <li class="nav-item text-center">
                             <a class="nav-link" href="../index.html">Inicio</a>
                         </li>
@@ -76,7 +76,7 @@
     </main>
     <footer>
         <div>
-            <img src="../assets/img/logo_cat_cafe.png" alt=" Logo" class="logofoot">
+            <img src="../assets/img/logo_cat_cafe.png" alt=" Logo" class="logo logofoot">
             <p>Dirección: Algún lugar de Viña del Mar, Local 3</p>
             <p>Teléfono: +56 9 8765 4321</p>
         </div>
